--- a/src/Components/ProductDetail/style.css
+++ b/src/Components/ProductDetail/style.css
@@ -1,19 +1,19 @@
 /* Works on Firefox */
-.description {
+.dark .description {
     scrollbar-width: thin;
     scrollbar-color: #7d7d7d82 #1f2937;
   }
   
   /* Works on Chrome, Edge, and Safari */
-.description::-webkit-scrollbar {
+.dark .description::-webkit-scrollbar {
     width: 12px;
   }
   
-.description::-webkit-scrollbar-track {
+.dark .description::-webkit-scrollbar-track {
     background: #7d7d7d82;
   }
   
-.description::-webkit-scrollbar-thumb {
+.dark .description::-webkit-scrollbar-thumb {
     background-color: #1f2937;
     border-radius: 20px;
     border: 3px solid #7d7d7d82;
